kube/dev/0.4.elastic.yml

---
# Source: elasticsearch/templates/es-discovery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: manageable-toucan-elasticsearch-discovery
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch
    role: master
spec:
  selector:
    component: manageable-toucan-elasticsearch
    role: master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
---
# Source: elasticsearch/templates/es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: manageable-toucan-elasticsearch
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch
    role: client
spec:
  type: ClusterIP
  selector:
    component: manageable-toucan-elasticsearch
    role: client
  ports:
  - name: http
    port: 9200
    targetPort: 9200
    protocol: TCP
  - name: transport
    port: 9300
    targetPort: 9300
    protocol: TCP
---
# Source: elasticsearch/templates/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: manageable-toucan-elasticsearch-kibana
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch-kibana
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5601
    protocol: TCP
  selector:
    component: manageable-toucan-elasticsearch-kibana
---
# Source: elasticsearch/templates/es-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: manageable-toucan-elasticsearch-client
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch
    role: client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: manageable-toucan-elasticsearch
        role: client
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchLabels:
                  component: manageable-toucan-elasticsearch
                  role: client
      containers:
      - name: es-client
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: "quay.io/pires/docker-elasticsearch-kubernetes:6.2.3"
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9300
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: 9200
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: "storage"
---
# Source: elasticsearch/templates/es-data.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manageable-toucan-elasticsearch-data
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch
    role: data
spec:
  replicas: 2
  template:
    metadata:
      labels:
        component: manageable-toucan-elasticsearch
        role: data
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchLabels:
                  component: manageable-toucan-elasticsearch
                  role: data
      containers:
      - name: es-data
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: "quay.io/pires/docker-elasticsearch-kubernetes:6.2.3"
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9300
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
        - emptyDir:
            medium: ""
          name: "storage"
---
# Source: elasticsearch/templates/es-master.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manageable-toucan-elasticsearch-master
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch
    role: master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: manageable-toucan-elasticsearch
        role: master
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchLabels:
                  component: manageable-toucan-elasticsearch
                  role: master
      containers:
      - name: es-master
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: "quay.io/pires/docker-elasticsearch-kubernetes:6.2.3"
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 9300
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
        - emptyDir:
            medium: ""
          name: "storage"
---
# Source: elasticsearch/templates/kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: manageable-toucan-elasticsearch-kibana
  namespace: venue-dev
  labels:
    app: manageable-toucan-elasticsearch
    chart: "elasticsearch-0.2.2"
    release: "manageable-toucan"
    heritage: "Tiller"
    component: manageable-toucan-elasticsearch-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
     component: manageable-toucan-elasticsearch-kibana
  template:
    metadata:
      labels:
        component: manageable-toucan-elasticsearch-kibana
    spec:
      containers:
      - name: kibana
        image: "docker.elastic.co/kibana/kibana-oss:6.2.3"
        imagePullPolicy: Always
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 5601
          name: kibana
          protocol: TCP
---
# Source: elasticsearch/templates/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: manageable-toucan-elasticsearch-kibana
  namespace: venue-dev
  labels:
    app: elasticsearch
    chart: elasticsearch-0.2.2
    release: manageable-toucan
    heritage: Tiller
    component: manageable-toucan-elasticsearch-kibana
  annotations:
      kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: dev.kibana.vlabs.ninja
      http:
        paths:
          - backend:
              serviceName: manageable-toucan-elasticsearch-kibana
              servicePort: 80
