kube/dev/1.4.traefik.ui.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: venue-dev
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: venue-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: dev.traefik.vlabs.ninja
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
